package game;

public class GameScreenUtils {
    public static int rowAmount = 5;
    public static int colAmount = 7;

    public static int gridCellHeight = 128;
    public static int gridCellWidth = 128;

    public static int getRowAmount() {
        return rowAmount;
    }

    public static int getColAmount() {
        return colAmount;
    }


    public static int getGridCellHeight() {
        return gridCellHeight;
    }

    public static int getGridCellWidth() {
        return gridCellWidth;
    }
}
