package units.logic;

import units.enemy.Enemies;

public interface AttackRatable {
    public void attack(Enemies enemies);
}
