package units.logic;

import game.Soul;

public interface Producable {
    public void produce(Soul soul);
}
